--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
         </div>
 
     </header>
+    <main>
+        <section class="section">
+            <h1 class="section-title">Donate Today</h1>
+            <p class="section-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli<br>
+                deterruisset. No duo populo animal noluisse, enim</p>
+            <div class="section-container">
+                <p class="cards-items">100tk</p>
+                <p class="cards-items">200tk</p>
+                <p class="cards-items">500tk</p>
+                <p class="cards-items">1000tk</p>
+                <p class="cards-items">2000tk</p>
+            </div>
+            <div>
+                <input class="amount-input" type="text" placeholder="Other Amount (Taka)">
+
+            </div>
+            <button class="btn-primary">Donate Now</button>
+        </section>
+    </main>
 </body>
 
 </html>
