--- a/index.html
+++ b/index.html
@@ -37,6 +37,38 @@
             </div>
             <button class="btn-primary">Donate Now</button>
         </section>
+        <section class="section">
+            <h1 class="section-title">Our Donate Plan</h1>
+            <p class="section-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli<br>
+                deterruisset. No duo populo animal noluisse, enim</p>
+            <div class="our-donate-container">
+                <div class="our-donate-subcontainer">
+                    <img src="icons/food.png" alt="food" class="our-donate-img">
+                    <h2 class="our-donate-title">Food for a family</h2>
+                    <p class="our-donate-description">Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+                <div class="our-donate-subcontainer">
+                    <img src="icons/shelter.png" alt="shelter" class="our-donate-img">
+                    <h2 class="our-donate-title">Shelter for a family</h2>
+                    <p class="our-donate-description">Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+                <div class="our-donate-subcontainer">
+                    <img src="icons/Frame-1.png" alt="Frame-1" class="our-donate-img">
+                    <h2 class="our-donate-title">Education for a child</h2>
+                    <p class="our-donate-description">Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+
+            </div>
+        </section>
     </main>
 </body>
 
