Our Donate Plan

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p class="section-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli<br>
                 deterruisset. No duo populo animal noluisse, enim</p>
             <div class="our-donate-container">
-                <div class="our-donate-subcontainer">
+                <div class="our-donate-subcontainer bg-color-frist-child">
                     <img src="icons/food.png" alt="food" class="our-donate-img">
                     <h2 class="our-donate-title">Food for a family</h2>
                     <p class="our-donate-description">Amet minim mollit non deserunt
@@ -50,7 +50,7 @@
                         sint. Velit officia consequat duis enim
                         velit mollit.</p>
                 </div>
-                <div class="our-donate-subcontainer">
+                <div class="our-donate-subcontainer bg-color-middle-child">
                     <img src="icons/shelter.png" alt="shelter" class="our-donate-img">
                     <h2 class="our-donate-title">Shelter for a family</h2>
                     <p class="our-donate-description">Amet minim mollit non deserunt
@@ -58,7 +58,7 @@
                         sint. Velit officia consequat duis enim
                         velit mollit.</p>
                 </div>
-                <div class="our-donate-subcontainer">
+                <div class="our-donate-subcontainer bg-color-last-child">
                     <img src="icons/Frame-1.png" alt="Frame-1" class="our-donate-img">
                     <h2 class="our-donate-title">Education for a child</h2>
                     <p class="our-donate-description">Amet minim mollit non deserunt
