--- a/index.html
+++ b/index.html
@@ -66,7 +66,21 @@
                         sint. Velit officia consequat duis enim
                         velit mollit.</p>
                 </div>
-
+            </div>
+        </section>
+        <section class="blog-section">
+            <div class="blog-container">
+                <div class="blog-sub-container">
+                    <h1 class="blog-title">Their lives depend h your donation</h1>
+                    <p class="blog-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                        deterruisset. No duo populo animal noluisse, enim</p>
+                    <p class="blog-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                        deterruisset.</p>
+                    <button class="btn-primary">How to Contribute?</button>
+                </div>
+                <div class="blog-img-container">
+                    <img src="images/donation0.jpg" alt="donation-photo" class="blog-img">
+                </div>
             </div>
         </section>
     </main>
