something improve design

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <section class="blog-section">
             <div class="blog-container">
                 <div class="blog-sub-container">
-                    <h1 class="blog-title">Their lives depend h your donation</h1>
+                    <h1 class="blog-title">Their lives depend on<br>your donation</h1>
                     <p class="blog-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
                         deterruisset. No duo populo animal noluisse, enim</p>
                     <p class="blog-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
